objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PlatformProvider__c</fullName>
        <label>Platform Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Ascensus</fullName>
                </value>
                <value>
                    <fullName>CPI/CUNA</fullName>
                </value>
                <value>
                    <fullName>Daily Access/Verasite/Newport</fullName>
                </value>
                <value>
                    <fullName>Empower</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>John Hancock</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Mass Mutual (legacy Hartford)</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Prudential</fullName>
                </value>
                <value>
                    <fullName>Securian</fullName>
                </value>
                <value>
                    <fullName>The Standard</fullName>
                </value>
                <value>
                    <fullName>TransAmerica</fullName>
                </value>
                <value>
                    <fullName>Voya</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>Value selected as part of the Institutional Sub Advised process for new relationships.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Institutional US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.ProductVisible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QDIA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Qualified Default Investment Alternative. Used by RADU in the NSFF Process</description>
        <label>QDIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonforLoss__c</fullName>
        <label>Reason for Loss</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordKeeper__c</fullName>
        <description>For the RADU NSFF Opportunity process</description>
        <label>Record Keeper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Alerus</fullName>
                </value>
                <value>
                    <fullName>Ascensus</fullName>
                </value>
                <value>
                    <fullName>Big Green</fullName>
                </value>
                <value>
                    <fullName>Employee Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Empower</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>John Hancock</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Mass Mutual</fullName>
                </value>
                <value>
                    <fullName>Merrill Lynch</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paychex</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Prudential</fullName>
                </value>
                <value>
                    <fullName>Schwab</fullName>
                </value>
                <value>
                    <fullName>Social K</fullName>
                </value>
                <value>
                    <fullName>TIAA</fullName>
                </value>
                <value>
                    <fullName>Transamerica</fullName>
                </value>
                <value>
                    <fullName>Voya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralMethod__c</fullName>
        <description>The form of communication that the contact rep was referred.</description>
        <label>Referral Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RepContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For the PRCG Process to be populated with Rep/Contact associated to the request.</description>
        <label>Contact/Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Do Not Show)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportRole__c</fullName>
        <formula>$User.ReportRole__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestArtemusID__c</fullName>
        <description>Auto populated with Process Builder based on the PRCG CPE Artemus Request ID</description>
        <label>Artemus Request ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <description>Date the Artemus Request was placed</description>
        <inlineHelpText>Date the Artemus Request was placed</inlineHelpText>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>New Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Method_Translation__c</fullName>
        <label>Sales Method - Translation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Relations Sales Stages</fullName>
                </value>
                <value>
                    <fullName>IAG/Fiduciary Sales Stage</fullName>
                </value>
                <value>
                    <fullName>Overlay Sales Stages</fullName>
                </value>
                <value>
                    <fullName>PRCG Pipeline</fullName>
                </value>
                <value>
                    <fullName>Retirement Sales Stages</fullName>
                </value>
                <value>
                    <fullName>Sales Stage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>If(IsClosed, 'Closed', 'Open')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <description>Used in the Institutional Sub Advised Opportunity process and populated before the new product is created</description>
        <label>Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Vol. Mgmt.</fullName>
                </value>
                <value>
                    <fullName>AIO</fullName>
                </value>
                <value>
                    <fullName>BXM</fullName>
                </value>
                <value>
                    <fullName>Global Alternatives</fullName>
                </value>
                <value>
                    <fullName>Global Equity</fullName>
                </value>
                <value>
                    <fullName>Global Macro</fullName>
                </value>
                <value>
                    <fullName>Green Bond</fullName>
                </value>
                <value>
                    <fullName>Index/RA</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Managed Futures</fullName>
                </value>
                <value>
                    <fullName>Transition Energy</fullName>
                </value>
                <value>
                    <fullName>US Tactical Asset Allocation</fullName>
                </value>
                <value>
                    <fullName>Water &amp; Agribusiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SynergyRowID__c</fullName>
        <description>Field to Store the Synergy Oracle OnDemand value</description>
        <externalId>true</externalId>
        <label>Synergy Row ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Used in Reports to display the primary territory</description>
        <formula>Owner.ActivityTerritoryName__c</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TodayPlus14Days__c</fullName>
        <formula>TODAY()  + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Plus 14 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TodayPlus7Days__c</fullName>
        <formula>TODAY()  + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Plus 7 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <description>Use this field to "touch" the opportunity for purposes of executing the "after update" triggers, including sharing rules and opportunity territory/region/channel.</description>
        <label>Touch</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ModifiedDate__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>a02F000000DHHopIAH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RepContact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Inst_Open</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ExpectedFlows__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Strategy__c</columns>
        <columns>CapitalContributions__c</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.InstSubAdv</value>
        </filters>
        <label>All Open Institutional</label>
        <sharedTo>
            <group>SFDC_Admins</group>
            <group>Sales_Institutional</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inst_Won_Unfunded</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ExpectedFlows__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Strategy__c</columns>
        <columns>CapitalContributions__c</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Won Unfunded</value>
        </filters>
        <label>All Institutional Won Unfunded Oppty</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RepContact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Empower_Leads</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyNatixisAdvisorOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RepContact__c</columns>
        <columns>NatixisAdvisorProspect__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ModifiedDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NatixisAdvisorProspect__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>**My Natixis Advisor Opportunities</label>
        <sharedTo>
            <group>SalesSDU</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>ModifiedDate__c</columns>
        <columns>CreatedDate__c</columns>
        <filterScope>Mine</filterScope>
        <label>My All Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>a02F000000DHHopIAH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>NotModified__c</columns>
        <columns>ModifiedDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>*My Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_PRCG_CPE_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RepContact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>RequestDate__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>PRCG Comprehensive Portfolio Evaluation</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed PRCG CPE Opportunities</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Coverage</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MyCoverageAccount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>MyCoverageContactRep__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Coverage - Open Opportunitites</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_DU_Closed_Clarity_CPE_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RepContact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>NotModified__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>PRCG Comprehensive Portfolio Evaluation</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My DU's Closed Clarity CPE Opportunities</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_DU_Open_Clarity_CPE_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RepContact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>NotModified__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>PRCG Comprehensive Portfolio Evaluation</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My DU's Open Clarity CPE Opportunities</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_DUs_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OpportunityTerritory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>MyDUOpportunities__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My DU's Open Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>a02F000000VK7RjIAL</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Inst</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ExpectedFlows__c</columns>
        <columns>Affiliate__c</columns>
        <columns>ProductType__c</columns>
        <columns>Strategy__c</columns>
        <columns>CapitalContributions__c</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>My Open Institutional Opportunities</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>LastActivityDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>NotModified__c</columns>
        <columns>ModifiedDate__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>*My Open Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>AIA</fullName>
        <active>true</active>
        <businessProcess>AIA</businessProcess>
        <description>Sales process specific to AIA strategy opportunities</description>
        <label>AIA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Empower_Leads</fullName>
        <active>true</active>
        <businessProcess>Empower Leads</businessProcess>
        <description>This record type tracks leads passed from ADU to RADU</description>
        <label>Empower Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>InstSubAdv</fullName>
        <active>true</active>
        <businessProcess>Instututional Sub Advised</businessProcess>
        <description>Associated to the Institutional Sub Advised Sales Process</description>
        <label>InstSubAdv</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSFF</fullName>
        <active>true</active>
        <businessProcess>NSFF</businessProcess>
        <description>To support RADU with the NSFF Opportunity process</description>
        <label>NSFF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_PRCG_CPE_Request</fullName>
        <active>true</active>
        <businessProcess>PRCG CPE Request</businessProcess>
        <label>Sales PRCG CPE Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Standard</label>
    </recordTypes>
    <validationRules>
        <fullName>Only_One_Primary_Product</fullName>
        <active>false</active>
        <description>Only 1 primary Strategy/Product can be selected.</description>
        <errorConditionFormula>Count_Primary__c   &gt;  1</errorConditionFormula>
        <errorMessage>Only 1 primary Strategy/Product can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunities_ClosedWon_and_ClosedLost</fullName>
        <active>true</active>
        <description>Opportunities with stage "Closed Won" must populate Amount and  with stage "Closed Lost" must populate Reason for Loss.</description>
        <errorConditionFormula>OR(AND(ISPICKVAL( StageName , "Closed Won"), ISBLANK( Amount )), AND(ISPICKVAL(StageName, "Closed Lost"), ISBLANK( ReasonforLoss__c )))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>If Opportunity Stage is  Closed Won, Please provide the Expected Assets or If opportunity is a Closed Lost, Please Provide the Reason for Loss.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Line_Item_Validation</fullName>
        <active>true</active>
        <description>Checking if Boolean field OpportunityLineItem is set true or not based on record types and Opportunity stages. Note For institutional Prospect it is not required but it is for Prospecting.</description>
        <errorConditionFormula>NOT(ISPICKVAL( StageName , "Prospect")) &amp;&amp;
NOT(ISPICKVAL( StageName , "Research")) &amp;&amp;
NOT(ISPICKVAL( StageName , "Closed Lost")) &amp;&amp;
NOT(ISPICKVAL( StageName , "On Hold")) &amp;&amp;
NOT(HasOpportunityLineItem)</errorConditionFormula>
        <errorMessage>Product is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Won_Funded_Unfunded_Req_Product</fullName>
        <active>false</active>
        <description>The Won Unfunded and Won Funded Stages are part of the Institutional Opportunity Sales Process. The following fields and records are required to be associated to an opportunity in the stage of 'Won Funded'. 1.) Product 2.) Funding 3.) Fee Structure</description>
        <errorConditionFormula>OR(ISPICKVAL( StageName , 'Won Funded'),ISPICKVAL( StageName , 'Won Unfunded')) 
&amp;&amp; 
OR(
 
HasOpportunityLineItem = FALSE ,
FeeStructureRollUp__c  &lt; 1,
 FundingRollUp__c  &lt; 1
)
&amp;&amp;  RecordType.DeveloperName = 'InstSubAdv'</errorConditionFormula>
        <errorMessage>The following fields and records are required to be associated to an Institutional opportunity in the stage of 'Won Unfunded' and 'Won Funded'.

1.) Primary selected in Strategy/Product section
2.) Funding
3.) Fee Structure</errorMessage>
    </validationRules>
</CustomObject>